--- a/multimedia-front-end/src/assets/css/navbar.scss
+++ b/multimedia-front-end/src/assets/css/navbar.scss
@@ -53,25 +53,25 @@ body,
     position: absolute;
     left: 60px;
     top: 200px;
-    animation: float-l 10s infinite;
+    animation: float-l 20s linear infinite;
   }
   .cloud2{
     position: absolute;
     right: 40px;
     top: 280px;
-    animation: float-r 10s infinite;
+    animation: float-r 20s linear infinite;
   }
   .cloud3{
     position: absolute;
     left: 60px;
     bottom: 280px;
-    animation: float-l 10s infinite;
+    animation: float-l 20s linear infinite;
   }
   .cloud4{
     position: absolute;
     right: 50px;
     bottom: 200px;
-    animation: float-r 10s infinite;
+    animation: float-r 20s linear infinite;
   }
 
   @keyframes float-l {
