--- a/multimedia-front-end/src/assets/css/navbar.scss
+++ b/multimedia-front-end/src/assets/css/navbar.scss
@@ -15,35 +15,34 @@ body,
     background-image: url('~@/assets/img/navbar/card.png');
     background-size: 100% 100%;
     //display: inline-block;
-    width: 80%;
-    height: 80%;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    z-index: 100;
-    div{
-      padding: 100px 240px;
-      ul{
-        li{
-          // margin-left: 200px;
-          // margin-top: 14px;
-          // position: absolute;
-          padding-bottom: 10px;
-          margin-bottom: 2px;
-          cursor: pointer;
-          &:hover{
-            border-bottom: 2px solid black;
-          }
-          span{
-            color: rgb(67, 67, 67);
-            font-weight: 100;
-          }
-          span:first-child{
-            font-size: 50px;
-          }
-          span:last-child{
-            font-size: 35px;
-          }
+    // width: 80%;
+    // height: 80%;
+    //position: absolute;
+    // top: 10%;
+    // left: 10%;
+    z-index: 1000;
+    padding: 6rem 14.4rem;
+    margin-top: 7%;
+    ul{
+      li{
+        // margin-left: 200px;
+        // margin-top: 14px;
+        // position: absolute;
+        padding-bottom: 10px;
+        margin-bottom: 2px;
+        cursor: pointer;
+        &:hover{
+          border-bottom: 2px solid black;
+        }
+        span{
+          color: rgb(67, 67, 67);
+          font-weight: 100;
+        }
+        span:first-child{
+          font-size: 3rem;
+        }
+        span:last-child{
+          font-size: 2.1rem;
         }
       }
     }
@@ -77,12 +76,16 @@ body,
   @keyframes float-l {
     0%{
       left: 10px;
+      // right: none;
     }
     50%{
       left: 1590px;
+      // left: none;
+      // right: 10px;
     }
     100%{
       left: 10px;
+      // right: none;
     }
   }
   @keyframes float-r {
