--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -6,7 +6,7 @@ body,
 }
 
 .home{
-  background-image: url('~@/assets/img/home/background.png');
+  background-image: url('~@/assets/img/home/background.webp');
   position: relative;
 
   .content{
