--- a/multimedia-front-end/src/assets/css/navbar.scss
+++ b/multimedia-front-end/src/assets/css/navbar.scss
@@ -12,7 +12,7 @@ body,
   //text-align: center;
   
   .card{
-    background-image: url('~@/assets/img/navbar/card.png');
+    background-image: url('~@/assets/img/navbar/card.webp');
     background-size: 100% 100%;
     //display: inline-block;
     // width: 80%;
