--- a/multimedia-front-end/src/assets/css/default.scss
+++ b/multimedia-front-end/src/assets/css/default.scss
@@ -8,6 +8,7 @@ body,
   height: 100%;
   background-color: rgb(165, 42, 26);
   position: relative;
+  overflow: hidden;
   .default-header{
     text-align: center;
     .title{
