--- a/multimedia-front-end/src/assets/css/navbar.scss
+++ b/multimedia-front-end/src/assets/css/navbar.scss
@@ -39,10 +39,11 @@ body,
           font-weight: 100;
         }
         span:first-child{
-          font-size: 3rem;
+          font-size: 40px;
+          margin-right: 25px;
         }
         span:last-child{
-          font-size: 2.1rem;
+          font-size: 30px;
         }
       }
     }
