--- a/multimedia-front-end/src/assets/css/navbar.scss
+++ b/multimedia-front-end/src/assets/css/navbar.scss
@@ -4,56 +4,62 @@ body,
   height: 100%;
 }
 
-.navbar {
-  height: 99.9%;
-  background-color: rgb(236, 234, 223);
-  //background-image: url('~@/assets/img/navbar/background.png');
-  position: relative;
-  //text-align: center;
-  
-  .card{
-    background-image: url('~@/assets/img/navbar/card.webp');
-    background-size: 100% 100%;
-    //display: inline-block;
-    // width: 80%;
-    // height: 80%;
-    //position: absolute;
-    // top: 10%;
-    // left: 10%;
-    z-index: 1000;
-    padding: 6rem 14.4rem;
-    margin-top: 7%;
-    ul{
-      li{
-        // margin-left: 200px;
-        // margin-top: 14px;
-        // position: absolute;
-        padding-bottom: 10px;
-        margin-bottom: 2px;
-        cursor: pointer;
-        &:hover{
-          border-bottom: 2px solid black;
-        }
-        span{
-          color: rgb(67, 67, 67);
-          font-weight: 100;
-        }
-        span:first-child{
-          font-size: 40px;
-          margin-right: 25px;
-        }
-        span:last-child{
-          font-size: 30px;
+.transition-box{
+  transition: all 1s;
+  height: 100%;
+  .navbar {
+    height: 99.9%;
+    background-color: rgb(236, 234, 223);
+    //background-image: url('~@/assets/img/navbar/background.png');
+    position: relative;
+    //text-align: center;
+    .transition-box{
+      transition: all 1s;
+    }
+    .card{
+      background-image: url('~@/assets/img/navbar/card.webp');
+      background-size: 100% 100%;
+      //display: inline-block;
+      // width: 80%;
+      // height: 80%;
+      //position: absolute;
+      // top: 10%;
+      // left: 10%;
+      z-index: 1000;
+      padding: 6rem 14.4rem;
+      margin-top: 7%;
+      ul{
+        li{
+          // margin-left: 200px;
+          // margin-top: 14px;
+          // position: absolute;
+          padding-bottom: 10px;
+          margin-bottom: 2px;
+          cursor: pointer;
+          &:hover{
+            border-bottom: 2px solid black;
+          }
+          span{
+            color: rgb(67, 67, 67);
+            font-weight: 100;
+          }
+          span:first-child{
+            font-size: 40px;
+            margin-right: 25px;
+          }
+          span:last-child{
+            font-size: 30px;
+          }
         }
       }
     }
-  }
-
-  .btn-close{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    right: 100px;
-    top: 50px;
+  
+    .btn-close{
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      right: 100px;
+      top: 50px;
+    }
   }
 }
