--- a/multimedia-front-end/src/assets/css/default.scss
+++ b/multimedia-front-end/src/assets/css/default.scss
@@ -25,7 +25,7 @@ body,
   .default-card{
     background-image: url('~@/assets/img/default/card.webp');
     background-size: 100% 100%;
-    height: 500px;
+    // height: 500px;
     padding: 100px;
     margin-top: 9%;
   }
