--- a/multimedia-front-end/src/assets/css/bbs.scss
+++ b/multimedia-front-end/src/assets/css/bbs.scss
@@ -1,4 +1,11 @@
 .bbs{
+  .user{
+    div{
+      button{
+        float: right;
+      }
+    }
+  }
   .bbs-content{
     padding: 20px 0;
     margin-top: 10px;
@@ -43,6 +50,7 @@
       }
     }
   }
+
 }
 
 // .info-delivery-content div .lost .lost-content {
