try convert png to webp

--- a/multimedia-front-end/src/assets/css/navbar.scss
+++ b/multimedia-front-end/src/assets/css/navbar.scss
@@ -10,7 +10,7 @@ body,
   .navbar {
     height: 99.9%;
     background-color: rgb(236, 234, 223);
-    //background-image: url('~@/assets/img/navbar/background.png');
+    //background-image: url('~@/assets/img/navbar/background.webp');
     position: relative;
     //text-align: center;
     .transition-box{
