--- a/multimedia-front-end/src/assets/css/introduceMain.scss
+++ b/multimedia-front-end/src/assets/css/introduceMain.scss
@@ -1,13 +1,13 @@
 .introduce-main{
   .img-one{
     float: right;
-    height: 150px;
+    // height: 150px;
     width: 200px;
     margin-left: 20px;
   }
   .img-two{
     float: left;
-    height: 150px;
+    // height: 150px;
     width: 200px;
     margin-right: 20px;
   }
