--- a/multimedia-front-end/src/assets/css/wheel.scss
+++ b/multimedia-front-end/src/assets/css/wheel.scss
@@ -17,7 +17,7 @@
     }
     
     .material-left {
-      width: 80%;
+      width: 100%;
       max-height: 70vh;
       //  overflow-y: auto;
       //  display:flex;
@@ -27,46 +27,66 @@
       //  float: left;
       //  max-height: 300px;
       .material-box {
-        margin-bottom: 5px;
+        // margin-bottom: 5px;
         text-align: center;
-    
+        
+        .first-content{
+          z-index: 10;
+        }
+
+
+        .fourth-content{
+          z-index: 100;
+        }
+        .fifth-content{
+          z-index: 10;
+        }
+
         .first{
-          height: 30px;
-          border: 2px solid #bbb;
+          height: 100px;
+          // z-index: 1;
+          // border: 2px solid #bbb;
         }
     
         .second{
-          height: 50px;
-          border: 2px solid #888;
+          height: 150px;
+          // z-index: 2;
+          // border: 2px solid #888;
         }
     
         .thrid{
-          height: 75px;
-          border: 2px solid #222;
+          height: 200px;
+          // z-index: 1000;
+          // border: 2px solid #222;
         }
     
         .fourth{
-          height: 50px;
-          border: 2px solid #888;
+          height: 150px;
+          // z-index: 2;
+          // border: 2px solid #888;
+          // margin-top: 25px;
         }
     
         .fifth{
-          height: 30px;
-          border: 2px solid #bbb;
+          height: 100px;
+          // z-index: 1;
+          // border: 2px solid #bbb;
+          // margin-top: 40px;
         }
         > div {
           cursor: pointer;
+          height: 50px;
           // display: flex;
           // justify-content: center;
           // align-items: center;
-          height: 70px;
-          width: 95%;
+          height: 75px;
+          // width: 95%;
           // border: 1px solid #ddd;
           //background: #fff;
           // overflow: hidden;
           
           >div{
-            padding: 10px;
+            // padding: 20px;
             // margin-bottom: 50px;
           }
         }
@@ -82,12 +102,14 @@
       // display: flex;
       // justify-content: center;
       // align-items: center;
-    
-      > div {
+      
+      .material-content{
+        // border: 1px solid black;
         height: 66vh;
         display: flex;
         justify-content: center;
         align-items: center;
+        border: 1px solid black;
       }
     
       .arrow-left {
