--- a/multimedia-front-end/src/assets/css/login.scss
+++ b/multimedia-front-end/src/assets/css/login.scss
@@ -1,14 +1,61 @@
 .login{
+  padding: 110px 50px;
+  // background-size:  ;
+  background-repeat: no-repeat;
+  background-size:50%;
+  background-position: center center;
+  text-align: center;
+  &.img1{
+    background-image: url('~@/assets/img/login/小人1.webp');
+  }
+  &.img2{
+    background-image: url('~@/assets/img/login/小人2.webp');
+  }
+  // h1{
+  //   margin-top: 80px;
+  // }
   .el-row{
-    margin-top: 60px;
+    // padding-top: 500px;
+    // padding: 5px;
+    // margin-top: 60px;
+    // padding-top: 50px;
+    .top{
+      margin-top: 100px;
+    }
+    input{
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid rgb(165, 42, 26);
+      font-size: 20px;
+      &::placeholder{
+        color: rgb(165, 42, 26);
+      }
+      margin-top: 20px;
+    }
+    button{
+      color: #fff;
+      background-color: rgb(165, 42, 26);
+      margin-top: 30px;
+      padding: 10px 40px 10px;
+      // margin-right: 50px;
+      font-size: 20px;
+      border: none;
+      // display: inline;
+      &:hover{
+        border: none;
+      }
+      &:focus{
+        border: none;
+      }
+    }
   }
   label{
     line-height: 35px;
   }
   .to-register{
-    text-align:center;
+    margin-top: 30px;
     a{
-      color:#333;
+      color:rgb(165, 42, 26);
       text-decoration: none;
       cursor: pointer;
       &:hover{
