--- a/multimedia-front-end/src/assets/css/wheel.scss
+++ b/multimedia-front-end/src/assets/css/wheel.scss
@@ -117,6 +117,7 @@
         h1{
           font-family: "lishu"; //"Arial","Microsoft YaHei","黑体","宋体",sans-serif;
           font-weight: 300;
+          margin-left: 40px;
         }
         p{
           text-indent: 2em;
