--- a/multimedia-front-end/src/assets/css/articleList.scss
+++ b/multimedia-front-end/src/assets/css/articleList.scss
@@ -19,7 +19,26 @@
     }
     .iframe-index{
       padding: 20px;
+      iframe{
+        height: 300px;
+      }
     }
+  }
+  .finally{
+    color: #fff;
+    background-color: rgb(165, 42, 26);
+      margin-top: 30px;
+      padding: 10px 20px 10px;
+      // margin-right: 50px;
+      font-size: 20px;
+      border: none;
+      // display: inline;
+      &:hover{
+        border: none;
+      }
+      &:focus{
+        border: none;
+      }
   }
   .red{
     color: #fff;
@@ -65,7 +84,7 @@
 		border-radius: 3px;
     .comment-every{
       position: relative;
-			padding: 20px;
+			// padding: 20px;
 			&:hover {
 				cursor: pointer;
 				box-shadow: 1px 1px 10px #aaa;
