--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -1,41 +1,66 @@
 html,
 body,
 #app,
-.home{
+.home {
   height: 100%;
+  width: 100%;
 }
 
-.home{
+.home {
   background-image: url('~@/assets/img/home/background.webp');
-  position: relative;
 
-  .content{
-    display: flex;
-    justify-content: center;
-    .box{
-      position: absolute;
-      width: 23%;
-      top: 7%;
-      
-      .title{
-        width: 75%;
-      }
-      .seal{
-        width: 18%;
-        float: right;
-        margin-top: 40%;
-      }
+  .content {
+    width: 100%;
+    height: 100%;
+
+    #footer-container {
+      width: 100%;
+      height: 100%;
+      min-height: auto;
+      box-sizing: border-box;
+
+      background-attachment: scroll;
+      background-repeat: no-repeat;
+      background-position-x: center;
+      background-position-y: bottom;
+      background-size: 100% auto;
+      background-image: url(~@/assets/img/home/footer.webp)
     }
-  
-    .logo-content{
+
+    #center-content {
+      width: 60%;
+      max-width: 430px;
+      min-width: 300px;
+      min-height: 250px; 
+
       position: absolute;
-      bottom: 14%;
-      width: 28%;
-      .logo{
-        width: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      .box {
+        margin-left: 10%;
+        margin-right: 10%;
+
+        .title {
+          width: 65%;
+        }
+
+        .seal {
+          margin-top: 40%;
+        }
+      }
+
+      .logo-content {
+        padding-top: 10%;
+
+        .logo {
+          width: 100%;
+        }
       }
     }
   }
+
   // .test{
   //   border: 1px solid black;
   //   align-items: center;
@@ -60,32 +85,39 @@ body,
   //     width: 100%;
   //   }
   // }
-  .btn-threeline{
+  .btn-threeline {
+    width: 8%;
+    max-width: 50px;
     position: absolute;
     right: 50px;
     top: 50px;
   }
-  .cloud1{
+
+  .cloud1 {
     position: absolute;
     left: 405px;
     top: 204px;
   }
-  .cloud2{
+
+  .cloud2 {
     position: absolute;
     right: 690px;
     top: 123px;
   }
-  .cloud3{
+
+  .cloud3 {
     position: absolute;
     left: 565px;
     top: 432px;
   }
-  .cloud4{
+
+  .cloud4 {
     position: absolute;
     right: 484px;
     top: 430px;
   }
-  .footer{
+
+  .footer {
     width: 100%;
     position: absolute;
     bottom: 0px;
