--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -1,62 +1,63 @@
 html,
 body,
-#app,
-.home {
+#app {
   height: 100%;
   width: 100%;
 }
 
-.home {
-  background-image: url('~@/assets/img/home/background.webp');
+#content-background {
+  width: 100%;
+  height: 100%;
 
-  .content {
+  background-image: url("~@/assets/img/home/background.webp");
+
+  #content {
     width: 100%;
     height: 100%;
 
-    #footer-container {
-      width: 100%;
-      height: 100%;
-      min-height: auto;
-      box-sizing: border-box;
+    min-height: 500px;
 
-      background-attachment: scroll;
-      background-repeat: no-repeat;
-      background-position-x: center;
-      background-position-y: bottom;
-      background-size: 100% auto;
-      background-image: url(~@/assets/img/home/footer.webp)
+    @media screen and () {
+      
     }
 
-    #center-content {
-      width: 60%;
-      max-width: 430px;
-      min-width: 300px;
-      min-height: 250px; 
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: bottom;
+    background-size: 100% auto;
+    background-image: url(~@/assets/img/home/footer.webp);
+  }
 
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+  #center-content {
+    width: 30%;
+    max-width: 430px;
+    min-width: 300px;
+    min-height: 250px;
 
-      .box {
-        margin-left: 10%;
-        margin-right: 10%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -55%);
 
-        .title {
-          width: 65%;
-        }
+    #content-title {
+      margin-left: 10%;
+      margin-right: 10%;
 
-        .seal {
-          margin-top: 40%;
-        }
+      #title {
+        width: 65%;
       }
 
-      .logo-content {
-        padding-top: 10%;
+      #seal {
+        margin-top: 40%;
+      }
+    }
 
-        .logo {
-          width: 100%;
-        }
+    #content-logo {
+      padding-top: 10%;
+
+      #logo {
+        width: 100%;
       }
     }
   }
