--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -11,15 +11,19 @@ body,
 
   background-image: url("~@/assets/img/home/background.webp");
 
+  @media all and (orientation: landscape) {
+    min-height: 48vw;
+  }
+
+  @media all and (orientation: portrait) {
+    min-height: 120vw;
+  }
+
   #content {
     width: 100%;
     height: 100%;
 
     min-height: 500px;
-
-    @media screen and () {
-      
-    }
 
     background-attachment: scroll;
     background-repeat: no-repeat;
@@ -27,100 +31,114 @@ body,
     background-position-y: bottom;
     background-size: 100% auto;
     background-image: url(~@/assets/img/home/footer.webp);
+
+    position: relative;
+    z-index: 1;
+
+    #center-content {
+      width: 30%;
+      max-width: 430px;
+      min-width: 300px;
+      min-height: 250px;
+
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -55%);
+      z-index: 2;
+
+      #content-title {
+        margin-left: 10%;
+        margin-right: 10%;
+
+        #title {
+          width: 65%;
+        }
+
+        #seal {
+          margin-top: 40%;
+        }
+      }
+
+      #content-logo {
+        padding-top: 10%;
+
+        #logo {
+          width: 100%;
+        }
+      }
+    }
+
+    #btn-threeline {
+      width: 8%;
+      max-width: 50px;
+      position: absolute;
+      right: 50px;
+      top: 50px;
+    }
   }
 
-  #center-content {
-    width: 30%;
-    max-width: 430px;
-    min-width: 300px;
-    min-height: 250px;
+  #decoration_cloud_container {
+    width: 100%;
 
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -55%);
+    z-index: 0;
+    overflow: hidden;
 
-    #content-title {
-      margin-left: 10%;
-      margin-right: 10%;
-
-      #title {
-        width: 65%;
-      }
-
-      #seal {
-        margin-top: 40%;
-      }
+    @keyframes decoration_cloud_animation {
+      from { margin-left: -25% }
+      to { margin-left: 100% }
     }
 
-    #content-logo {
-      padding-top: 10%;
+    #decoration_cloud_1 {
+      display: block;
 
-      #logo {
-        width: 100%;
-      }
+      width: 25%;
+      min-width: 120px;
+      max-width: 220px;
+
+      margin-top: 20px;
+
+      animation: decoration_cloud_animation 15s infinite linear alternate;
     }
-  }
 
-  // .test{
-  //   border: 1px solid black;
-  //   align-items: center;
-  //   padding-top: 3%;
-  //   .title{
-  //     width: 100%;
-  //   }
-  //   .seal{
-  //     width: 100%;
-  //     margin-top: 200px;
-  //   }
-  // }
-  // .test1{
-  //   border: 1px solid black;
-  //   align-items: center;
-  // }
+    #decoration_cloud_2 {
+      display: block;
 
-  // .logo-content{
-  //   //position: absolute;
-  //   //bottom: 100px;
-  //   .logo{
-  //     width: 100%;
-  //   }
-  // }
-  .btn-threeline {
-    width: 8%;
-    max-width: 50px;
-    position: absolute;
-    right: 50px;
-    top: 50px;
-  }
+      width: 15%;
+      min-width: 80px;
+      max-width: 180px;
 
-  .cloud1 {
-    position: absolute;
-    left: 405px;
-    top: 204px;
-  }
+      margin-top: 20px;
 
-  .cloud2 {
-    position: absolute;
-    right: 690px;
-    top: 123px;
-  }
+      animation: decoration_cloud_animation 15s infinite linear alternate-reverse;
+    }
 
-  .cloud3 {
-    position: absolute;
-    left: 565px;
-    top: 432px;
-  }
+    #decoration_cloud_3 {
+      display: block;
 
-  .cloud4 {
-    position: absolute;
-    right: 484px;
-    top: 430px;
-  }
+      width: 15%;
+      min-width: 120px;
+      max-width: 220px;
 
-  .footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0px;
+      margin-top: 20px;
+
+      animation: decoration_cloud_animation 15s infinite linear alternate;
+    }
+
+    #decoration_cloud_4 {
+      display: block;
+
+      width: 25%;
+      min-width: 80px;
+      max-width: 180px;
+
+      margin-top: 20px;
+
+      animation: decoration_cloud_animation 15s infinite linear alternate-reverse;
+    }
   }
 }
