--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -73,8 +73,8 @@ body,
       width: 8%;
       max-width: 50px;
       position: absolute;
-      right: 50px;
-      top: 50px;
+      right: 5vw;
+      top: 5vw;
     }
   }
 
