--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -1,23 +1,10 @@
-html,
-body,
-#app {
-  height: 100%;
-  width: 100%;
-}
-
 #content-background {
   width: 100%;
   height: 100%;
 
+  overflow: hidden;
+
   background-image: url("~@/assets/img/home/background.webp");
-
-  @media all and (orientation: landscape) {
-    min-height: 48vw;
-  }
-
-  @media all and (orientation: portrait) {
-    min-height: 120vw;
-  }
 
   #content {
     width: 100%;
@@ -33,6 +20,7 @@ body,
     background-image: url(~@/assets/img/home/footer.webp);
 
     position: relative;
+    float: left;
     z-index: 1;
 
     #center-content {
@@ -79,14 +67,14 @@ body,
   }
 
   #decoration_cloud_container {
-    width: 100%;
+    width: 75%;
+    height: 100%;
 
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -55%);
     z-index: 0;
-    overflow: hidden;
 
     @keyframes decoration_cloud_animation {
       from { margin-left: -25% }
@@ -95,6 +83,7 @@ body,
 
     #decoration_cloud_1 {
       display: block;
+      overflow: hidden;
 
       width: 25%;
       min-width: 120px;
