--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -67,13 +67,12 @@
   }
 
   #decoration_cloud_container {
-    width: 75%;
+    width: 100%;
     height: 100%;
 
+    overflow: hidden;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -55%);
+    //top: 50%;
     z-index: 0;
 
     @keyframes decoration_cloud_animation {
