fix base canvas

--- a/multimedia-front-end/src/assets/css/app.scss
+++ b/multimedia-front-end/src/assets/css/app.scss
@@ -1,13 +1,15 @@
-html,body, #app {
-    width: 100%;
-    height: 100%;
+html,
+body,
+#app {
+  width: 100%;
+  height: 100%;
 }
 
 #canvas {
-    #app {
-        width: 100%;
-        height: 100%;;
-    }
+  #app {
+    width: 100%;
+    height: 100%;
+  }
   height: 100%;
   width: 100%;
   margin: 0 auto;
@@ -23,11 +25,11 @@ html,body, #app {
 
   @media (orientation: landscape) and (max-height: 700px) {
     height: 700px;
-    width: 15400px;
+    max-width: 1540px;
   }
 
   @media (orientation: portrait) and (max-width: 300px) {
-      width: 300px;
-      height: 660px;
+    width: 300px;
+    max-height: 660px;
   }
 }
