--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -2,15 +2,15 @@
   width: 100%;
   height: 100%;
 
-  overflow: hidden;
-
   background-image: url("~@/assets/img/home/background.webp");
 
   #content {
     width: 100%;
     height: 100%;
 
-    min-height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     background-attachment: scroll;
     background-repeat: no-repeat;
@@ -30,10 +30,6 @@
       min-height: 250px;
 
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -55%);
-      z-index: 2;
 
       #content-title {
         margin-left: 10%;
@@ -68,16 +64,19 @@
 
   #decoration_cloud_container {
     width: 100%;
-    height: 100%;
+    height: auto;
 
-    overflow: hidden;
     position: absolute;
-    //top: 50%;
+    overflow: hidden;
     z-index: 0;
 
     @keyframes decoration_cloud_animation {
-      from { margin-left: -25% }
-      to { margin-left: 100% }
+      from {
+        margin-left: -25%;
+      }
+      to {
+        margin-left: 100%;
+      }
     }
 
     #decoration_cloud_1 {
