--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -1,37 +1,43 @@
-#content-background {
+#content {
   width: 100%;
   height: 100%;
 
   background-image: url("~@/assets/img/home/background.webp");
 
-  #content {
+  #center-content {
     width: 100%;
     height: 100%;
 
     display: flex;
     justify-content: center;
     align-items: center;
-
-    background-attachment: scroll;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: bottom;
-    background-size: 100% auto;
-    background-image: url(~@/assets/img/home/footer.webp);
-
     position: relative;
-    float: left;
-    z-index: 1;
 
-    #center-content {
+    #footer {
+      width: 100%;
+      height: 100%;
+
+      background-attachment: scroll;
+      background-repeat: no-repeat;
+      background-position-x: center;
+      background-position-y: bottom;
+      background-size: 100% auto;
+      background-image: url(~@/assets/img/home/footer.webp);
+
+      position: absolute;
+      z-index: 2;
+    }
+
+    #main-object-container {
       width: 30%;
       max-width: 430px;
       min-width: 300px;
       min-height: 250px;
 
       position: absolute;
+      z-index: 3;
 
-      #content-title {
+      #main-title {
         margin-left: 10%;
         margin-right: 10%;
 
@@ -44,7 +50,7 @@
         }
       }
 
-      #content-logo {
+      #main-logo {
         padding-top: 10%;
 
         #logo {
@@ -62,15 +68,15 @@
     }
   }
 
-  #decoration_cloud_container {
+  #decoration-cloud-container {
     width: 100%;
     height: auto;
 
     position: absolute;
     overflow: hidden;
-    z-index: 0;
+    z-index: 1;
 
-    @keyframes decoration_cloud_animation {
+    @keyframes decoration-cloud-animation {
       from {
         margin-left: -25%;
       }
@@ -79,7 +85,7 @@
       }
     }
 
-    #decoration_cloud_1 {
+    #decoration-cloud-1 {
       display: block;
       overflow: hidden;
 
@@ -89,10 +95,10 @@
 
       margin-top: 20px;
 
-      animation: decoration_cloud_animation 15s infinite linear alternate;
+      animation: decoration-cloud-animation 15s infinite linear alternate;
     }
 
-    #decoration_cloud_2 {
+    #decoration-cloud-2 {
       display: block;
 
       width: 15%;
@@ -101,10 +107,10 @@
 
       margin-top: 20px;
 
-      animation: decoration_cloud_animation 15s infinite linear alternate-reverse;
+      animation: decoration-cloud-animation 15s infinite linear alternate-reverse;
     }
 
-    #decoration_cloud_3 {
+    #decoration-cloud-3 {
       display: block;
 
       width: 15%;
@@ -113,10 +119,10 @@
 
       margin-top: 20px;
 
-      animation: decoration_cloud_animation 15s infinite linear alternate;
+      animation: decoration-cloud-animation 15s infinite linear alternate;
     }
 
-    #decoration_cloud_4 {
+    #decoration-cloud-4 {
       display: block;
 
       width: 25%;
@@ -125,7 +131,7 @@
 
       margin-top: 20px;
 
-      animation: decoration_cloud_animation 15s infinite linear alternate-reverse;
+      animation: decoration-cloud-animation 15s infinite linear alternate-reverse;
     }
   }
 }
