--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -29,10 +29,10 @@
     }
 
     #main-object-container {
-      width: 30%;
-      max-width: 430px;
-      min-width: 300px;
-      min-height: 250px;
+      width: 23%;
+      max-width: 35rem;
+      min-width: 20rem;
+      min-height: 23rem;
 
       position: absolute;
       z-index: 3;
@@ -61,7 +61,7 @@
 
     #btn-threeline {
       width: 8%;
-      max-width: 50px;
+      max-width: 20rem;
       position: absolute;
       right: 5vw;
       top: 5vw;
@@ -90,10 +90,8 @@
       overflow: hidden;
 
       width: 25%;
-      min-width: 120px;
-      max-width: 220px;
-
-      margin-top: 20px;
+      min-width: 10rem;
+      max-width: 18rem;
 
       animation: decoration-cloud-animation 15s infinite linear alternate;
     }
@@ -102,10 +100,10 @@
       display: block;
 
       width: 15%;
-      min-width: 80px;
-      max-width: 180px;
+      min-width: 6rem;
+      max-width: 10rem;
 
-      margin-top: 20px;
+      margin-top: 2rem;
 
       animation: decoration-cloud-animation 15s infinite linear alternate-reverse;
     }
@@ -114,10 +112,10 @@
       display: block;
 
       width: 15%;
-      min-width: 120px;
-      max-width: 220px;
+      min-width: 6rem;
+      max-width: 10rem;
 
-      margin-top: 20px;
+      margin-top: 4rem;
 
       animation: decoration-cloud-animation 15s infinite linear alternate;
     }
@@ -126,10 +124,8 @@
       display: block;
 
       width: 25%;
-      min-width: 80px;
-      max-width: 180px;
-
-      margin-top: 20px;
+      min-width: 10rem;
+      max-width: 18rem;
 
       animation: decoration-cloud-animation 15s infinite linear alternate-reverse;
     }
