add navbar button

--- a/multimedia-front-end/src/assets/css/home.scss
+++ b/multimedia-front-end/src/assets/css/home.scss
@@ -2,7 +2,19 @@
   width: 100%;
   height: 100%;
 
+  position: relative;
+
   background-image: url("~@/assets/img/home/background.webp");
+
+  #main-navbar-button {
+    width: 1rem;
+    padding: 2rem;
+
+    position: absolute;
+    z-index: 3;
+    right: 2rem;
+    top: 0rem;
+  }
 
   #center-content {
     width: 100%;
@@ -13,7 +25,7 @@
     align-items: center;
     position: relative;
 
-    #footer {
+    #main-footer {
       width: 100%;
       height: 100%;
 
@@ -28,7 +40,7 @@
       z-index: 2;
     }
 
-    #main-object-container {
+    #main-text {
       width: 23%;
       max-width: 35rem;
       min-width: 20rem;
@@ -57,14 +69,6 @@
           width: 100%;
         }
       }
-    }
-
-    #btn-threeline {
-      width: 8%;
-      max-width: 20rem;
-      position: absolute;
-      right: 5vw;
-      top: 5vw;
     }
   }
 
