--- a/multimedia-front-end/src/assets/css/app.scss
+++ b/multimedia-front-end/src/assets/css/app.scss
@@ -13,6 +13,8 @@ body,
   height: 100%;
   width: 100%;
   margin: 0 auto;
+  position: relative;
+  overflow: hidden;
 }
 
 @media (orientation: landscape) {
