--- a/multimedia-front-end/src/assets/css/articleList.scss
+++ b/multimedia-front-end/src/assets/css/articleList.scss
@@ -19,8 +19,24 @@
 		}
 		.iframe-index {
 			padding: 20px;
-			iframe {
-				// height: 300px;
+		}
+		.activity-button{
+			button{
+				color: #fff;
+			background-color: rgb(165, 42, 26);
+			margin-top: 30px;
+			padding: 10px 20px 10px;
+			font-size: 20px;
+			border: none;
+			&:hover {
+				border: none;
+			}
+			&:focus {
+				border: none;
+			}
+			}
+			.exit-btn{
+				background-color: #bbb;
 			}
 		}
 	}
@@ -30,10 +46,8 @@
 			background-color: rgb(165, 42, 26);
 			margin-top: 30px;
 			padding: 10px 20px 10px;
-			// margin-right: 50px;
 			font-size: 20px;
 			border: none;
-			// display: inline;
 			&:hover {
 				border: none;
 			}
@@ -106,6 +120,19 @@
 					height: 60px;
 					border: none;
 				}
+			}
+		}
+	}
+	.portrait-list{
+		padding: 15px 0;
+		margin-top: 5px;
+		background: #eee;
+		border-radius: 3px;
+		>div{
+			padding: 10px;
+			img{
+				width: 100%;
+				border-radius: 50%;
 			}
 		}
 	}
