--- a/multimedia-front-end/src/assets/css/bbs.scss
+++ b/multimedia-front-end/src/assets/css/bbs.scss
@@ -21,7 +21,22 @@
 		}
   }
   .bbs-top{
-    margin-bottom: 10px;
+		// margin-bottom: 10px;
+		// .btn-article{
+		// 	color: #fff;
+		// 		background-color: rgb(165, 42, 26);
+		// 		// margin-top: 30px;
+		// 		padding: 10px 30px;
+		// 		font-size: 20px;
+    //     border: none;
+    //     // margin-right: 10px;
+		// 		&:hover {
+		// 			border: none;
+		// 		}
+		// 		&:focus {
+		// 			border: none;
+		// 		}
+		// }
   }
 	.bbs-content {
 		padding: 15px 0;
