--- a/multimedia-front-end/src/assets/css/personal.scss
+++ b/multimedia-front-end/src/assets/css/personal.scss
@@ -44,6 +44,35 @@
     
   }
 
+  .kind{
+    >div{
+      text-align: center;
+      font-size: 20px;
+      cursor: pointer;
+      color: #fff;
+				background-color: rgb(165, 42, 26);
+				padding: 5px 10px;
+				margin-right: 20px;
+				// margin-right: 50px;
+				font-size: 20px;
+        border: none;
+        border-radius: 5px;
+				// display: inline;
+				&:hover {
+					border: none;
+				}
+				&:focus {
+					border: none;
+				}
+				&.btn-active{
+					background-color: transparent;
+					border: 2px solid #666;
+					color: #666;
+					box-sizing: border-box;
+				}
+    }
+  }
+
   .comment-content{
     border: 1px solid black;
     padding: 15px 20px;
